# k8s-manager

./: README.md  dev.ps1  dev.sh  prod.ps1  prod.sh
.github/: copilot-instructions.md
backend/: Cargo.toml
backend/src/: k8s.rs  main.rs  models.rs  router.rs  routes.rs
backend/src/handlers/: health.rs  k8s.rs  mod.rs  port_forward.rs  tests.rs
backend/src/managers/: port_forward.rs
backend/src/services/: k8s.rs  mod.rs  tests.rs
frontend/: package.json
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: Layout.tsx  StatCard.tsx  StatusBadge.tsx
frontend/src/hooks/: useK8s.ts
frontend/src/pages/: App.tsx  LandingPage.tsx
frontend/src/pages/context/: ResourceDetailsPage.tsx  pods.tsx  resources.tsx
frontend/src/services/: api.ts
frontend/src/types/: k8s.ts
