[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.0", features = ["full"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26", features = ["v1_30"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
mockall = "0.13.1"
serde_json = "1.0"
tokio-test = "0.4.4"
tower-test = "0.4.0"
